force-app/main/default/objects/Fokus_Subscription__c/Fokus_Subscription__c.object-meta.xml
<CustomObject>
    <label>Fokus Subscription</label>
    <nameField>
        <label>Fokus Subscription</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fokus Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>