force-app/main/default/objects/Fokus_Subscription__c/fields/ACCESS_INSTALLATION_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>ACCESS_INSTALLATION_ADDRESS__c</fullName>
    <label>ACCESS_INSTALLATION_ADDRESS</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>