force-app/main/default/objects/Fokus_Subscription__c/fields/ACCESS_INSTALLATION_ZIPCODE__c.field-meta.xml
<CustomField>
    <fullName>ACCESS_INSTALLATION_ZIPCODE__c</fullName>
    <label>ACCESS_INSTALLATION_ZIPCODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>