force-app/main/default/objects/Fokus_Subscription__c/fields/Account_IgnoredRemoved__c.field-meta.xml
<CustomField>
    <fullName>Account_IgnoredRemoved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to create a related list just to show ignored/removed Fokus subscriptions on account</description>
    <label>Account (Ignored/Removed)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fokus Subscriptions (Account (Ignored/Removed))</relationshipLabel>
    <relationshipName>Fokus_Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>