force-app/main/default/objects/Fokus_Subscription__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>TEXT(SF_ACCOUNT_KEY__r.Status__c)</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>