force-app/main/default/objects/Fokus_Subscription__c/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <label>BAN</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>