force-app/main/default/objects/Fokus_Subscription__c/fields/BAN_OWNER_CONTROL_NUA__c.field-meta.xml
<CustomField>
    <fullName>BAN_OWNER_CONTROL_NUA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAN_OWNER_CONTROL_NUA</label>
    <type>Checkbox</type>
</CustomField>