force-app/main/default/objects/Fokus_Subscription__c/fields/BILLING_CITY__c.field-meta.xml
<CustomField>
    <fullName>BILLING_CITY__c</fullName>
    <label>BILLING_CITY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>