force-app/main/default/objects/Fokus_Subscription__c/fields/BILLING_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>BILLING_COUNTRY__c</fullName>
    <label>BILLING_COUNTRY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>