force-app/main/default/objects/Fokus_Subscription__c/fields/BILLING_POSTAL_CODE__c.field-meta.xml
<CustomField>
    <fullName>BILLING_POSTAL_CODE__c</fullName>
    <label>BILLING_POSTAL_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>