force-app/main/default/objects/Fokus_Subscription__c/fields/BILLING_STREET_NO__c.field-meta.xml
<CustomField>
    <fullName>BILLING_STREET_NO__c</fullName>
    <label>BILLING_STREET_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>