force-app/main/default/objects/Fokus_Subscription__c/fields/CALLS_FROM_DK_TO_EUNB_MIN__c.field-meta.xml
<CustomField>
    <fullName>CALLS_FROM_DK_TO_EUNB_MIN__c</fullName>
    <label>CALLS_FROM_DK_TO_EUNB_MIN</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>