force-app/main/default/objects/Fokus_Subscription__c/fields/COMPANY_NAME__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_NAME__c</fullName>
    <label>COMPANY_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>