force-app/main/default/objects/Fokus_Subscription__c/fields/Contract_Group__c.field-meta.xml
<CustomField>
    <fullName>Contract_Group__c</fullName>
    <label>Contract Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Fastnet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>