force-app/main/default/objects/Fokus_Subscription__c/fields/CURRING_PRICE_AFTER_DISCOUNT_EXCL_VAT_TE__c.field-meta.xml
<CustomField>
    <fullName>CURRING_PRICE_AFTER_DISCOUNT_EXCL_VAT_TE__c</fullName>
    <label>CURRING_PRICE_AFTER_DISCOUNT_EXCL_VAT_TE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>