force-app/main/default/objects/Fokus_Subscription__c/fields/CUSTOMER_CURRENT_KEY__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_CURRENT_KEY__c</fullName>
    <label>CUSTOMER_CURRENT_KEY</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>