force-app/main/default/objects/Fokus_Subscription__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <formula>OR( NOT(ISBLANK(BROADBAND_NO__c)),NOT(ISBLANK( FIX_NO__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data</label>
    <type>Checkbox</type>
</CustomField>