force-app/main/default/objects/Fokus_Subscription__c/fields/DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT__c</fullName>
    <label>DISCOUNT</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>