force-app/main/default/objects/Fokus_Subscription__c/fields/DISCOUNT_TEXT__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT_TEXT__c</fullName>
    <label>DISCOUNT_TEXT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>