force-app/main/default/objects/Fokus_Subscription__c/fields/EAN_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>EAN_NUMBER__c</fullName>
    <label>EAN_NUMBER</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>