force-app/main/default/objects/Fokus_Subscription__c/fields/EAN_NUMBER_TEXT__c.field-meta.xml
<CustomField>
    <fullName>EAN_NUMBER_TEXT__c</fullName>
    <label>EAN_NUMBER_TEXT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>