force-app/main/default/objects/Fokus_Subscription__c/fields/FIX_NO__c.field-meta.xml
<CustomField>
    <fullName>FIX_NO__c</fullName>
    <label>FIX_NO</label>
    <type>Phone</type>
</CustomField>