force-app/main/default/objects/Fokus_Subscription__c/fields/FUTURE_CANCELLATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>FUTURE_CANCELLATION_DATE__c</fullName>
    <label>FUTURE_CANCELLATION_DATE</label>
    <type>Date</type>
</CustomField>