force-app/main/default/objects/Fokus_Subscription__c/fields/INTAKE_DATE__c.field-meta.xml
<CustomField>
    <fullName>INTAKE_DATE__c</fullName>
    <label>INTAKE_DATE</label>
    <type>Date</type>
</CustomField>