force-app/main/default/objects/Fokus_Subscription__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>OR(ISBLANK( EndDate__c ) , StartDate__c &gt; EndDate__c )</formula>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>