force-app/main/default/objects/Fokus_Subscription__c/fields/LAST_NAME__c.field-meta.xml
<CustomField>
    <fullName>LAST_NAME__c</fullName>
    <label>LAST_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>