force-app/main/default/objects/Fokus_Subscription__c/fields/LOAD_TYPE__c.field-meta.xml
<CustomField>
    <fullName>LOAD_TYPE__c</fullName>
    <description>D. DELETE
I: INSERT
U: UPDATE</description>
    <label>LOAD TYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>