force-app/main/default/objects/Fokus_Subscription__c/fields/MAX_MONTHLY_DATA_CONSUMPTION_MB__c.field-meta.xml
<CustomField>
    <fullName>MAX_MONTHLY_DATA_CONSUMPTION_MB__c</fullName>
    <label>MAX_MONTHLY_DATA_CONSUMPTION_MB</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>