force-app/main/default/objects/Fokus_Subscription__c/fields/MAX_MONTHLY_DATA_CONSUMPTION_MB_TEXT__c.field-meta.xml
<CustomField>
    <fullName>MAX_MONTHLY_DATA_CONSUMPTION_MB_TEXT__c</fullName>
    <label>MAX_MONTHLY_DATA_CONSUMPTION_MB_TEXT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>