force-app/main/default/objects/Fokus_Subscription__c/fields/Max_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max Number 1</label>
    <type>Checkbox</type>
</CustomField>