force-app/main/default/objects/Fokus_Subscription__c/fields/MOBILE_NO__c.field-meta.xml
<CustomField>
    <fullName>MOBILE_NO__c</fullName>
    <label>MOBILE_NO</label>
    <type>Phone</type>
</CustomField>