force-app/main/default/objects/Fokus_Subscription__c/fields/Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months__c</fullName>
    <formula>IF(NOT ISNULL(COMMIT_END_DATE__c)&amp;&amp;COMMIT_END_DATE__c&gt;SUBSCRIBER_START_DATE__c, ((YEAR( COMMIT_END_DATE__c+1 ) - YEAR( SUBSCRIBER_START_DATE__c   ))*12) + (MONTH(COMMIT_END_DATE__c+1) - MONTH(SUBSCRIBER_START_DATE__c )),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>