force-app/main/default/objects/Fokus_Subscription__c/fields/Option_For__c.field-meta.xml
<CustomField>
    <fullName>Option_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option For</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fokus Subscriptions (Option For)</relationshipLabel>
    <relationshipName>Fokus_Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>