force-app/main/default/objects/Fokus_Subscription__c/fields/ORDER_PRODUCT__c.field-meta.xml
<CustomField>
    <fullName>ORDER_PRODUCT__c</fullName>
    <label>ORDER_PRODUCT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>