force-app/main/default/objects/Fokus_Subscription__c/fields/Own_Main_Product__c.field-meta.xml
<CustomField>
    <fullName>Own_Main_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own Main Product</label>
    <type>Checkbox</type>
</CustomField>