force-app/main/default/objects/Fokus_Subscription__c/fields/OWNER_CONTROL_RCC__c.field-meta.xml
<CustomField>
    <fullName>OWNER_CONTROL_RCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OWNER_CONTROL_RCC</label>
    <type>Checkbox</type>
</CustomField>