force-app/main/default/objects/Fokus_Subscription__c/fields/PRICE_PLAN__c.field-meta.xml
<CustomField>
    <fullName>PRICE_PLAN__c</fullName>
    <label>PRICE_PLAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>