force-app/main/default/objects/Fokus_Subscription__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to process the data migration flow for this record</description>
    <label>Process</label>
    <type>Checkbox</type>
</CustomField>