force-app/main/default/objects/Fokus_Subscription__c/fields/Process_Message__c.field-meta.xml
<CustomField>
    <fullName>Process_Message__c</fullName>
    <label>Process Message</label>
    <type>TextArea</type>
</CustomField>