force-app/main/default/objects/Fokus_Subscription__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fokus Subscriptions</relationshipLabel>
    <relationshipName>Fokus_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>