force-app/main/default/objects/Fokus_Subscription__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>To use for data load: For TPX products. (Currently not used in the Flow logic)</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>