force-app/main/default/objects/Fokus_Subscription__c/fields/RECURRING_PRICE_AFTER_DISCOUNT_EXCL_TEXT__c.field-meta.xml
<CustomField>
    <fullName>RECURRING_PRICE_AFTER_DISCOUNT_EXCL_TEXT__c</fullName>
    <label>RECURRING_PRICE_AFTER_DISCOUNT_EXCL_TEXT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>