force-app/main/default/objects/Fokus_Subscription__c/fields/RECURRING_PRICE_AFTER_DISCOUNT_INCL_VAT__c.field-meta.xml
<CustomField>
    <fullName>RECURRING_PRICE_AFTER_DISCOUNT_INCL_VAT__c</fullName>
    <label>RECURRING_PRICE_AFTER_DISCOUNT_INCL_VAT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>