force-app/main/default/objects/Fokus_Subscription__c/fields/RECURRING_PRICE_BEFORE_DISCOUNT_EXCL_TEX__c.field-meta.xml
<CustomField>
    <fullName>RECURRING_PRICE_BEFORE_DISCOUNT_EXCL_TEX__c</fullName>
    <label>RECURRING_PRICE_BEFORE_DISCOUNT_EXCL_TEX</label>
    <length>100</length>
    <type>Text</type>
</CustomField>