force-app/main/default/objects/Fokus_Subscription__c/fields/Renewal_Product__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fokus Subscriptions (Renewal Product)</relationshipLabel>
    <relationshipName>Fokus_Subscriptions2</relationshipName>
    <type>Lookup</type>
</CustomField>