force-app/main/default/objects/Fokus_Subscription__c/fields/Replacement__c.field-meta.xml
<CustomField>
    <fullName>Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replacement</label>
    <type>Checkbox</type>
</CustomField>