force-app/main/default/objects/Fokus_Subscription__c/fields/ROOT_CVR_NO__c.field-meta.xml
<CustomField>
    <fullName>ROOT_CVR_NO__c</fullName>
    <label>ROOT_CVR_NO</label>
    <length>8</length>
    <type>Text</type>
</CustomField>