force-app/main/default/objects/Fokus_Subscription__c/fields/SERVICE_CODE__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_CODE__c</fullName>
    <label>SERVICE_CODE</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>