force-app/main/default/objects/Fokus_Subscription__c/fields/SERVICE_GROUP__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_GROUP__c</fullName>
    <label>SERVICE_GROUP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>