force-app/main/default/objects/Fokus_Subscription__c/fields/SF_ACCOUNT_KEY__c.field-meta.xml
<CustomField>
    <fullName>SF_ACCOUNT_KEY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF_ACCOUNT_KEY</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fokus Subscriptions</relationshipLabel>
    <relationshipName>Fokus_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>