force-app/main/default/objects/Fokus_Subscription__c/fields/SUBSCRIBER_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>SUBSCRIBER_EMAIL__c</fullName>
    <label>SUBSCRIBER_EMAIL</label>
    <type>Email</type>
</CustomField>