force-app/main/default/objects/Fokus_Subscription__c/fields/SUBSCRIBER_ID__c.field-meta.xml
<CustomField>
    <fullName>SUBSCRIBER_ID__c</fullName>
    <externalId>true</externalId>
    <label>SUBSCRIBER_ID</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>