force-app/main/default/objects/Fokus_Subscription__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Fokus Subscriptions</relationshipLabel>
    <relationshipName>Fokus_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>